--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   },
   "dependencies": {
     "axios": "^0.16.2",
+    "balance-text": "^3.1.1",
     "body-parser": "^1.17.2",
     "chalk": "^2.1.0",
     "cheerio": "^1.0.0-rc.2",
     "cookie-parser": "^1.4.3",
+    "date-fns": "^1.28.5",
     "debug": "^3.0.1",
     "express": "^4.15.4",
     "he": "^1.1.1",
@@ -24,7 +26,8 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-scripts": "1.0.12",
-    "serve-favicon": "^2.4.3"
+    "serve-favicon": "^2.4.3",
+    "styled-components": "^2.1.2"
   },
   "devDependencies": {
     "husky": "^0.14.3",
