--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cookie-parser": "^1.4.3",
     "date-fns": "^1.28.5",
     "debug": "^3.0.1",
+    "dotenv": "^4.0.0",
     "express": "^4.15.4",
     "he": "^1.1.1",
     "morgan": "^1.8.2",
@@ -27,7 +28,8 @@
     "react-dom": "^15.6.1",
     "react-scripts": "1.0.12",
     "serve-favicon": "^2.4.3",
-    "styled-components": "^2.1.2"
+    "styled-components": "^2.1.2",
+    "twitter": "^1.7.1"
   },
   "devDependencies": {
     "husky": "^0.14.3",
