--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
+    "deploy": "./scripts/deploy.sh",
     "precommit": "lint-staged"
   },
   "dependencies": {
@@ -34,6 +35,7 @@
   "devDependencies": {
     "husky": "^0.14.3",
     "lint-staged": "^4.0.4",
+    "now": "^8.0.1",
     "prettier": "^1.6.1"
   },
   "lint-staged": {
